--- a/src/main/resources/templates/front/swift/entityPickerView.mustache
+++ b/src/main/resources/templates/front/swift/entityPickerView.mustache
@@ -56,7 +56,7 @@ struct {{entity}}PickerView: View {
 
                     Section {
                         Button(t("Rafraîchir")) {
-                            viewModel.fetchEntities()
+                            Task{ await viewModel.pull()}
                         }
                         Button(t("Ajouter {{entity}}")) {
                             showForm = true
