--- a/src/main/resources/templates/front/swift/entityFormView.mustache
+++ b/src/main/resources/templates/front/swift/entityFormView.mustache
@@ -70,7 +70,7 @@ struct {{entity}}FormView: View {
                     Button(t("Enregistrer"), action: handleSave)
                         .frame(maxWidth: .infinity)
                         .padding()
-                        .background(Color.blue)
+                        .background(Color("TenantColorPrimary"))
                         .foregroundColor(.white)
                         .cornerRadius(8)
                 }
