--- a/src/main/resources/templates/front/swift/entitySyncView.mustache
+++ b/src/main/resources/templates/front/swift/entitySyncView.mustache
@@ -20,7 +20,7 @@ struct {{entity}}SyncView: View {
 
             if showMessage {
                 Text(t(message))
-                    .foregroundColor(.blue)
+                    .foregroundColor(Color("TenantColorPrimary"))
                     .font(.subheadline)
             }
         }
