--- a/src/main/resources/templates/front/swift/views/duplicateEntityView.mustache
+++ b/src/main/resources/templates/front/swift/views/duplicateEntityView.mustache
@@ -49,7 +49,7 @@ struct Duplicate{{entity}}View: View {
                     }
                     .frame(maxWidth: .infinity)
                     .padding()
-                    .background(Color.blue)
+                    .background(Color("TenantColorPrimary"))
                     .foregroundColor(.white)
                     .cornerRadius(8)
                 }
