--- a/src/main/resources/templates/front/swift/views/editEntityView.mustache
+++ b/src/main/resources/templates/front/swift/views/editEntityView.mustache
@@ -31,7 +31,7 @@ struct {{entity}}EditView: View {
                     Button("Save", action: handleSave)
                         .frame(maxWidth: .infinity)
                         .padding()
-                        .background(Color.blue)
+                        .background(Color("TenantColorPrimary"))
                         .foregroundColor(.white)
                         .cornerRadius(8)
                 }
