--- a/src/main/resources/templates/front/swift/views/monthSelectorView.mustache
+++ b/src/main/resources/templates/front/swift/views/monthSelectorView.mustache
@@ -41,7 +41,7 @@ struct MonthSelectorView: View {
                     }
                 }
                 .padding(8)
-                .background(Color.blue.opacity(0.15))
+                .background(Color("TenantColorPrimary").opacity(0.15))
                 .cornerRadius(8)
             }
 
