--- a/src/main/resources/templates/front/swift/views/indicatorView.mustache
+++ b/src/main/resources/templates/front/swift/views/indicatorView.mustache
@@ -9,7 +9,7 @@ struct {{entity}}IndicatorView: View {
             Text(title)
                 .font(.headline)
             ForEach(indicators.sorted(by: { $0.key < $1.key }), id: \.key) { key, value in
-                Text("🔢 \(key.capitalized): \(value)")
+                Text("\(key.capitalized): \(value)")
                     .font(.subheadline)
                     .foregroundColor(.gray)
             }
