--- a/src/main/resources/templates/front/swift/SwiftFieldInput.mustache
+++ b/src/main/resources/templates/front/swift/SwiftFieldInput.mustache
@@ -11,7 +11,6 @@ textField("{{displayName}}", text: ${{name}})
 {{#isDouble}}
     TextField("{{displayName}}", text: ${{name}}String)
     .keyboardType(.decimalPad)
-    .focused($is{{nameCapitalized}}Focused)
 {{/isDouble}}
 
 {{#isInt}}
@@ -72,3 +71,6 @@ HStack {
     )
 }
 {{/isManyToOne}}
+{{#focus}}
+.focused($is{{nameCapitalized}}Focused)
+ {{/focus}}
